# Praxis

./: CMakeLists.txt  README.md  almost_prime.cpp  approx_squaring.cpp  coffee_bean.cpp  coin_change.cpp  coin_change_2.cpp  coin_change_3.cpp  collatz.cpp  collatz_prime.cpp  contest_in_order.cpp  digit_6_prop.cpp  digits_3_div_11.cpp  dutch_flag.cpp  emirps.cpp  euler_12_alpha.cpp  exercise_combinatorics.cpp  fibonacci_prime.cpp  gen_pal_recip.cpp  geothmetic_meandian.cpp  google_treasure_hunt_4.cpp  knapsack.cpp  knapsack_dyn.cpp  longest_palindrome.cpp  motzkin.cpp  narcissistic.cpp  pandigital.cpp  penny_beta.cpp  penny_thread.cpp  perfect_totient_sieve.cpp  prime_count_legendre.cpp  prime_list.hpp  prime_palindromes.cpp  recip_pal_par.cpp  reciprocal_palindromes.cpp  rle.cpp  seveneleven.cpp  sieving_totients.cpp  special_10_digit.cpp  square_4_points.cpp  (+2 more)
