cmake_minimum_required(VERSION 3.7)
project(Praxis)

set(CMAKE_CXX_STANDARD 20)

add_executable(PENNY_BETA penny_beta.cpp)
add_executable(EULER_12 euler_12_alpha.cpp)
add_executable(PENNY_THREAD penny_thread.cpp)
add_executable(PERFECT_TOTIENT_SIEVE perfect_totient_sieve.cpp)
add_executable(COLLATZ collatz.cpp)
add_executable(COLLATZ_PRIME collatz_prime.cpp)
add_executable(SIEVING_TOTIENTS sieving_totients.cpp)
add_executable(PANDIGITAL pandigital.cpp)
add_executable(ALMOST_PRIME almost_prime.cpp)
add_executable(GEOTHMETIC_MEANDIAN geothmetic_meandian.cpp)
add_executable(APPROX_SQUARING approx_squaring.cpp)
add_executable(MOTZKIN motzkin.cpp)
add_executable(EXER_COMB exercise_combinatorics.cpp)
add_executable(SPEC_10_DIGIT special_10_digit.cpp)
add_executable(SQUARE_4_POINTS square_4_points.cpp)
