cmake_minimum_required(VERSION 3.7)
project(Praxis)

set(CMAKE_CXX_STANDARD 20)

add_executable(PENNY_BETA penny_beta.cpp)
add_executable(EULER_12 euler_12_alpha.cpp)
add_executable(PENNY_THREAD penny_thread.cpp)
add_executable(PERFECT_TOTIENT_SIEVE perfect_totient_sieve.cpp)
add_executable(COLLATZ collatz.cpp)
add_executable(COLLATZ_PRIME collatz_prime.cpp)
add_executable(SIEVING_TOTIENTS sieving_totients.cpp)
add_executable(PANDIGITAL pandigital.cpp)
add_executable(ALMOST_PRIME almost_prime.cpp)
add_executable(GEOTHMETIC_MEANDIAN geothmetic_meandian.cpp)
add_executable(APPROX_SQUARING approx_squaring.cpp)
add_executable(MOTZKIN motzkin.cpp)
add_executable(EXER_COMB exercise_combinatorics.cpp)
add_executable(SPEC_10_DIGIT special_10_digit.cpp)
add_executable(SQUARE_4_POINTS square_4_points.cpp)
add_executable(PRIME_PALINDROMES prime_palindromes.cpp)
add_executable(EMIRPS emirps.cpp)
add_executable(PRIME_COUNT_LEGENDRE prime_count_legendre.cpp)
add_executable(GOOGLE_TH_4 google_treasure_hunt_4.cpp)
add_executable(COIN_CHANGE coin_change.cpp)
add_executable(COIN_CHANGE2 coin_change_2.cpp)
add_executable(COIN_CHANGE3 coin_change_3.cpp)
add_executable(RLE rle.cpp)
add_executable(RECIPROCAL_PALINDROMES reciprocal_palindromes.cpp)
add_executable(SEVELEV seveneleven.cpp)
add_executable(COFFEEBEAN coffee_bean.cpp)
add_executable(TOWERHANOI tower_hanoi.cpp)
add_executable(NARCISSISTIC narcissistic.cpp)
add_executable(KNAPSACK knapsack.cpp)
add_executable(KNAPSACK_DYN knapsack_dyn.cpp)
add_executable(THREESUM threesum.cpp)
add_executable(DUTCHFLAG dutch_flag.cpp)
add_executable(DIGITS_3_DIV_11 digits_3_div_11.cpp)
add_executable(DIGIT_6_PROP digit_6_prop.cpp)
